--- a/style.css
+++ b/style.css
@@ -30,11 +30,11 @@ body {
     }
     10%,
     25% {
-        transform: rotate(5deg);
+        transform: rotate(2deg);
     }
     15%,
     30% {
-        transform: rotate(-5deg);
+        transform: rotate(-2deg);
     }
     50% {
         transform: rotate(0deg);
@@ -50,16 +50,17 @@ body {
     margin-bottom: 2rem;
 }
 
-@media screen and (max-width: 580px) {
-    .number-container {
-        transform: scale(0.5);
-    }
-}
-
 .number-move {
     transition: all 0.6s ease;
     position: absolute;
     width: 4rem;
+}
+
+.btn-container {
+    margin: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .btn {
@@ -75,6 +76,17 @@ body {
     text-transform: uppercase;
     cursor: pointer;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+    margin: 1rem;
+    transition: all 0.1s ease;
+    outline: none;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+.btn-stop {
+    background-color: lightseagreen;
 }
 
 .modal-back {
@@ -107,9 +119,21 @@ body {
     outline: none;
     color: #fff;
     max-width: 4rem;
-    /* border-bottom: 1px solid #fff; */
+    text-align: center;
 }
 
 .pos-count::placeholder {
     color: rgba(255, 255, 255, 0.5);
+}
+
+@media screen and (max-width: 580px) {
+    .title {
+        font-size: 1.6rem;
+    }
+    .number-container {
+        transform: scale(0.5);
+    }
+    .modal {
+        font-size: 3rem;
+    }
 }
