Cambio en el color de fondo

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: royalblue;
+    background-color: #0a0a0a;
 }
 
 .title {
